<resources>
    <string name="imm_app_name">即会通视频会议</string>
    <string name="imm_about_version_generatedtime">2014.01.16</string>
    <string name="imm_server_update">http://www.51kaihui.com/downloads/android/update.xml</string>
    <string name="imm_login_serverip_default">www.iactive.com.cn</string>
    <string name="imm_app_type">0</string>
    <string name="imm_note_path_default">/mnt/sdcard/note.txt</string>
    <string name="imm_login_serverport_default">11010</string>
    <string name="imm_server_report_error">./report/</string>
  <string name="imm_app_host">http://imm.liveuc.net/api</string>
  <string name="imm_app_host1">http://imm2.liveuc.net/api</string>
  <string name="imm_enterpris_name">imm</string>
  <string name="imm_start_android_head">liveuc</string>
  <string name="imm_app_key">2001</string>
   <string name="imm_api_request_uid">iactive.imm.api^2014</string>
   <string name="imm_api_request_pass">imm.api.#$^</string>
  <string name="imm_surface_ewb_line_width_set">线宽设置</string>
  <string name="imm_notification_content">会议客户端正在运行</string>
  <string name="imm_notification_nologin">未登录</string>
  <string name="imm_ok">确  定</string>
  <string name="imm_prompt">提  示</string>
  <string name="imm_cancel1">取  消</string>
  <string name="imm_exit">退  出</string>
  <string name="imm_return_text">返  回</string>
  <string name="imm_finish">完  成</string>
  <string name="imm_exit_not1">您是否要结束会议？</string>
  <string name="imm_login_error_userlogined_forceKickout">,是否强行踢出已登录的用户</string>
  <string name="imm_login_please_out">您被请出会议，退出</string>
  <string name="imm_please_quit">您被请出会议,将在</string>
    <string name="imm_please_quit1">秒钟退出！</string>
  <string name="imm_dlg_note_title">输入文件名</string>
  <string name="imm_note_not_fond">未找到笔记!</string>
  <string name="imm_note_load">载入笔记</string>
  <string name="imm_note_save">保存笔记</string>
  <string name="imm_note_exit"> 退 出 </string>
  <string name="imm_note_save_success">成功保存笔记!</string>
   <string name="imm_note_empty">.笔记为空!</string>
  <string name="imm_send">发  送</string>
  <string name="imm_comm_dialog_title">提示</string>
  <string name="imm_comm_dialog_positive">确定</string>
  <string name="imm_sendfile_title">接收文件</string>
  <string name="imm_sender">发送人:</string>
  <string name="imm_filename">文件名:</string>
  <string name="imm_filesize">文件大小:</string>
  <string name="imm_receive">接收</string>
  <string name="imm_refuse">不接收</string>
  <string name="imm_filesavepath">文件保存路径为:</string>
  <string name="imm_onload_please_wait">正在下载,请稍等...</string>
  <string name="imm_get_data_from_fail">网络通讯失败！</string>
  <string name="imm_net_error">网络连接失败，请检查是否已连接网络或网络是否可用</string>
  <string name="imm_count_online">参会人员列表(%1$d人)</string>
    <string name="imm_title_video_select">查看视频</string>
    <string name="imm_menu_show_video_all">查看所有视频</string>
    <string name="imm_menu_show_video">查看视频</string>
    <string name="imm_all_video">所有视频</string>
    <string name="imm_video">视频</string>
     <string name="imm_login_title">用户登录</string>
     <string name="imm_login_liveUC">运营平台</string>
      <string name="imm_login_text_server_name">服务器 :</string>
    <string name="imm_login_hint_server_name">输入服务器名</string>
    <string name="imm_login_text_enterprise_name">企业帐号:</string>
    <string name="imm_login_hint_enterprise_name">输入企业帐号</string>
    <string name="imm_login_text_serverport">端 口:</string>
    <string name="imm_login_text_username">用户帐号:</string>
    <string name="imm_login_text_username2">用户名称:</string>
    <string name="imm_login_hint_username">输入用户名</string>
    <string name="imm_login_text_password">用户密码:</string>
    <string name="imm_login_text_password_meeting">会议密码:</string>
    <string name="imm_login_hint_password">请输入密码</string>
    <string name="imm_login_text_LoginButton">登  录</string>
    <string name="imm_login_text_RoomID">会议编号:</string>
    <string name="imm_login_hint_RoomID">输入会议编号</string>
    <string name="imm_login_text_Protocol">网络协议:</string>
    <string name="imm_login_save_password">记住密码</string>
    <string name="imm_login_autologin">自动登录</string>
    <string name="imm_login_anonymous">匿名登录</string>
    <string name="imm_login_set_advance">设  置</string>
    <string name="imm_login_error_userwrong">用户名或密码错误</string>
    <string name="imm_login_error_userlogined">用户已登录</string>
    <string name="imm_login_error_countlimit">用户数已达到上限</string>
    <string name="imm_login_error_noslaver">无分发服务</string>
    <string name="imm_login_error_nopower">用户权限不够</string>
    <string name="imm_login_error_internet">服务错误或网络异常</string>
    <string name="imm_application_type">应用类型:</string>
    <string name="imm_type_meeting">视频会议</string>
    <string name="imm_type_education">培训教学</string>
    <string name="imm_type_uc">e-UC</string>
    <string name="imm_delete_cache">退出删除缓存文件</string>
    <string name="imm_udp">UDP协议</string>
    <string name="imm_tcp">TCP协议</string>
    <string name="imm_MultiCast">多路广播协议</string>
    <string name="imm_tip_inputRoomID">请输入会议编号</string>
    <string name="imm_tip_password_error">输入的密码错误！</string>
    <string name="imm_password_no_null">密码不能为空</string>
    <string name="imm_room_password_error">房间密码错误！</string>
    <string name="imm_room_no_use">会议室不可用！</string>
    <string name="imm_no_login_room">没有可登录的会议室</string>
    <string name="imm_room_user_max">房间用户已满</string>
    <string name="imm_meeting_password_title">输入密码:</string>
    <string name="imm_m_host_online">主持人在线</string>
    <string name="imm_m_host_outline">主持人离线</string>
     <string name="imm_setting_camara_title">视频配置</string>
    <string name="imm_setting_camara_fps">视频帧率</string>
    <string name="imm_setting_camara_size">视频大小</string>
    <string name="imm_setting_camara_quality">质 量:</string>
    <string name="imm_setting_camara_flow">视频码率</string>
    <string name="imm_setting_camara_hardware_expedite">硬件加速</string>
    <string name="imm_setting_video_compact">视频压缩</string>
    <string name="imm_setting_camara_defult">默认设置</string>
    <string name="imm_setting_camara_ok">确 定</string>
    <string name="imm_setting_camara_cancel">取 消</string>
    <string name="imm_setting_audio_title">音频设置</string>
    <string name="imm_setting_audio_aec">回声抑制</string>
    <string name="imm_setting_audio_aecvalue">启用</string>
    <string name="imm_setting_audio_algorithm">语音压缩</string>
    <string name="imm_setting_hard_solution">硬件解码</string>
    <string name="imm_setting_opengl">OpenGL绘制</string>
    <string name="imm_prompt_select_fps">请选择帧率</string>
    <string name="imm_prompt_select_size">请选择分辨率</string>
    <string name="imm_prompt_select_quality">请选择质量</string>
    <string name="imm_prompt_select_flow">请选择流量限定值</string>
    <string name="imm_prompt_select_hardware_expedite">是否启用硬件加速(重启生效)</string>
    <string name="imm_prompt_select_algorithm">请选择语音压缩算法</string>
    <string name="imm_prompt_select_video_compact">设定视频压缩算法:</string>
    <string name="imm_tv_cancel">取消</string>
    <string name="imm_tv_ok">确定</string>
    <string name="imm_tv_cancel_close">关闭</string>
    <string name="imm_tv_main_quit">退        出</string>
     <string name="imm_roomtype1">视频会议</string>
    <string name="imm_roomtype2">直播会议</string>
    <string name="imm_roomscope1">标清</string>
    <string name="imm_roomscope2">高清</string>
     <string name="imm_user_check_password">验证密码：</string>
    <string name="imm_user_get_password">获取密码</string>
    <string name="imm_user_get_password_secs">秒重获</string>
    <string name="imm_user_get_password_memo">（点击获取密码后验证密码通过手机短信发送）</string>
    <string name="imm_user_check_password_error">验证密码错误</string>
    <string name="imm_opt_ok">此操作成功</string>
    <string name="imm_opt_ok1">邀请成功</string>
    <string name="imm_opt_no1">没有邀请权限，请联系管理员</string>
    <string name="imm_opt_no2">请添加邀请的手机号码</string>
    <string name="imm_TAG_Position" />
    <string name="imm_TAG_Status" />
	<string name="imm_att_video_open">视频打开</string>
	<string name="imm_att_video_close">视频关闭</string>
	<string name="imm_att_adminmode_setspeaker">主控模式下才能设置主讲人</string>
	<string name="imm_att_isadmin_setspeaker">只有主持人能设置主讲人</string>
	<string name="imm_att_setspeaker_success">设置主讲人成功</string>
	<string name="imm_att_setvoice_main">请在主页面中按住发言键发言</string>
	<string name="imm_att_voice_open">音频打开</string>
	<string name="imm_att_voice_close">音频关闭</string>
	<string name="imm_att_isadmin_open_voice">只有主持人能打开关闭音频</string>
    <string name="imm_pickcolor">颜色选择器</string>
    <string name="imm_meeting_is_starting">正在启动会议...</string>
    <string name="imm_room_notexist">会议不存在</string>
     <string name="imm_mueu_hangup">挂断</string>
     <string name="imm_all_menu_voicetospeak_open">开启语音</string>
     <string name="imm_all_menu_voicetospeak_close">关闭语音</string>
     <string name="imm_all_menu_fenping_text">画面布局</string>
     <string name="imm_all_menu_attendees_text">参会人员</string>
     <string name="imm_all_menu_doc_text">文件管理</string>
     <string name="imm_all_menu_room_control_text">会议管理</string>
     <string name="imm_all_menu_setting_text">系统设置</string>
     <string name="imm_mueu_camara_change_text">切换镜头</string>
     <string name="imm_mueu_video_controll_open_text">打开视频</string>
     <string name="imm_mueu_video_controll_close_text">关闭视频</string>
     <string name="imm_mueu_video_model_change_sd">切换高清</string>
     <string name="imm_mueu_video_model_change_hd">切换模板</string>
    <string name="imm_room_mode_master">主控模式</string>
    <string name="imm_room_mode_free">讨论模式</string>
    <string name="imm_room_mode_free_no">非讨论模式</string>
    <string name="imm_room_mode_master_free">主控+讨论模式</string>
    <string name="imm_room_mode_open_master">开启主控</string>
    <string name="imm_room_mode_close_master">关闭主控</string>
    <string name="imm_room_invent">会议邀请</string>
    <string name="imm_can_not_set_meet_control">无法操作会议控制管理员</string>
     <string name="imm_tv_wait_admin_agreewith_speak">已申请举手，请等待</string>
     <string name="imm_tv_electronic_hands_cancle_request">已取消举手申请</string>
     <string name="imm_tv_electronic_hands_cancle">取消申请</string>
     <string name="imm_tv_electronic_hands">申请发言</string>
     <string name="imm_please_at_main_checked_btn_speaker">已经申请发言</string>
     <string name="imm_only_compere_open_or_close_voice">只有主持人能打开关闭音频</string>
	<string name="imm_only_compere_open_or_close_video">只有主持人能打开关闭视频</string>
	<string name="imm_The_teacher_back">主持人收回</string>
    <string name="imm_The_assistant_back">助理收回</string>
    <string name="imm_master_model_only_set_speaker">主控模式下才能设置主讲人</string>
    <string name="imm_set_speaker_success1">设置</string>
    <string name="imm_set_speaker_success2">为主讲人成功</string>
    <string name="imm_off_set_speaker_success1">取消设置</string>
    <string name="imm_off_set_speaker_success2">主讲人成功</string>
    <string name="imm_off_set_speaker_success3">数据共享权限</string>
    <string name="imm_off_set_speaker_success4">有数据共享权限</string>
    <string name="imm_noset_speaker_teacher">不能设置主持人或助理为发言人</string>
	<string name="imm_noset_speaker_teacher2">助理无法取回主持人数据共享权限</string>
	<string name="imm_noset_speaker_teacher3">无法设置主持人为发言人</string>
	<string name="imm_no_heping_change">合屏模式下不能设置视频</string>
	 <string name="imm_only_compere_set_speaker">只有主持人能设置主讲人</string>
	 <string name="imm_admin_allow_speak_wait">等待主持人允许发言</string>
	 <string name="imm_my">(我)</string>
	 <string name="imm_meeting_sign_ack">会议发起者正在点名，请点击确认进行签到</string>
     <string name="imm_api_method_contacts_get">imm.contacts.get</string>
     <string name="imm_api_method_invite">imm.room.invite</string>
	<string name="imm_super_clear">超清(</string>
    <string name="imm_high_definition">高清(</string>
    <string name="imm_standard_definition">标清(</string>
    <string name="imm_join_room_id_value">10000</string>
      <string name="imm_join_room_time_value">2014-11-15 12:30</string>
       <string name="imm_join_room_time_title">在线人数:</string>
          <string name="imm_join_room_code">编号:</string>
     <string name="imm_join_room_name_value">默认会议</string>
</resources>